删除无效代码

--- a/MvcFox/MvcFox/Views/HeadEdit/HeadImageEditView.cshtml
+++ b/MvcFox/MvcFox/Views/HeadEdit/HeadImageEditView.cshtml
@@ -1,5 +1,6 @@
 ﻿@model MvcFox.Models.ImageEditViewModel
 @{
+    //头像编辑，截图框在原始图片内
     Layout = null;
     Guid folder = Guid.NewGuid();
     string CurrentFolder = Guid.NewGuid().ToString();
