--- a/MvcFox/MvcFox/Views/Shared/_Layout.cshtml
+++ b/MvcFox/MvcFox/Views/Shared/_Layout.cshtml
@@ -10,10 +10,12 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @*@Scripts.Render("~/bundles/jquery")*@
-    <script src="~/Scripts/jquery-1.7.1.min.js" type="text/javascript"></script>
+    @*<script src="~/Scripts/jquery-1.7.1.min.js" type="text/javascript"></script>*@
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery-ui-1.8.20.min.js" type="text/javascript"></script>
     @*@Scripts.Render("~/bundles/jqueryui")*@
     <script src="~/Content/messi/messi.min.js" type="text/javascript"></script>
+    
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
