modify jquery ui style

--- a/MvcFox/MvcFox/Content/Site.css
+++ b/MvcFox/MvcFox/Content/Site.css
@@ -15,3 +15,49 @@ select,
 textarea {
     max-width: 280px;
 }
+
+
+/*jquery ui dialog css modify*/
+.ui-dialog{
+    padding:0
+}
+.ui-dialog .ui-corner-all {
+    border-bottom-left-radius:0;
+    border-bottom-right-radius:0;
+    border-top-left-radius:0;
+    border-top-right-radius:0;
+}
+.ui-widget-header{
+    border:0;
+    background:#f5f5f5;
+    color:#333;
+}
+.ui-widget-content {
+    background:none
+}
+.ui-icon-closethick {
+    background-image: url(images/close.png) !important;
+    background-position: left top !important;
+    margin: 0 !important;
+}
+.ui-dialog .ui-button-icon-only .ui-icon{
+    left:0;top:0
+}
+
+.ui-dialog .ui-dialog-titlebar-close, .ui-icon-closethick {
+    width: 16px !important;
+    height: 16px !important;
+}
+
+.ui-dialog .ui-dialog-titlebar-close {
+    background: none !important;
+    border: none !important;
+    border-bottom-left-radius:0;
+    border-bottom-right-radius:0;
+    border-top-left-radius:0;
+    border-top-right-radius:0;
+}
+
+.ui-dialog .ui-dialog-titlebar-close, .ui-dialog .ui-dialog-titlebar-close:hover {
+    padding: 0 !important;
+}
