--- a/MvcFox/MvcFox/Views/Shared/_Layout.cshtml
+++ b/MvcFox/MvcFox/Views/Shared/_Layout.cshtml
@@ -5,17 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - 我的 ASP.NET 应用程序</title>
-    <link href="~/Content/themes/base/jquery.ui.all.css?v=13" rel="Stylesheet" type="text/css" />
+    <link href="~/assets/jquery-ui-1.11.4/jquery-ui.min.css" rel="stylesheet" />
     <link href="~/Content/messi/messi.min.css" rel="stylesheet" type="text/css" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @*@Scripts.Render("~/bundles/jquery")*@
-    @*<script src="~/Scripts/jquery-1.7.1.min.js" type="text/javascript"></script>*@
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/jquery-ui-1.8.20.min.js" type="text/javascript"></script>
-    @*@Scripts.Render("~/bundles/jqueryui")*@
     <script src="~/Content/messi/messi.min.js" type="text/javascript"></script>
-    
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -48,6 +43,7 @@
 
     
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/assets/jquery-ui-1.11.4/jquery-ui.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
