修改jquery ui dialog

--- a/MvcFox/MvcFox/Views/Shared/_Layout.cshtml
+++ b/MvcFox/MvcFox/Views/Shared/_Layout.cshtml
@@ -41,9 +41,9 @@
         </footer>
     </div>
 
-    
     @Scripts.Render("~/bundles/bootstrap")
     <script src="~/assets/jquery-ui-1.11.4/jquery-ui.min.js"></script>
+    <script src="~/assets/jquery-ui-ext.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
