--- a/MvcFox/MvcFox/Content/Site.css
+++ b/MvcFox/MvcFox/Content/Site.css
@@ -17,7 +17,9 @@ textarea {
 }
 
 
-/*jquery ui dialog css modify*/
+/*jquery ui dialog css modify begin
+1.modify dialog
+*/
 .ui-dialog{
     padding:0
 }
@@ -32,8 +34,11 @@ textarea {
     background:#f5f5f5;
     color:#333;
 }
+.ui-dialog .ui-dialog-title{
+    margin:0.5em 0;
+}
 .ui-widget-content {
-    background:none
+    background:#fff
 }
 .ui-icon-closethick {
     background-image: url(images/close.png) !important;
@@ -61,3 +66,19 @@ textarea {
 .ui-dialog .ui-dialog-titlebar-close, .ui-dialog .ui-dialog-titlebar-close:hover {
     padding: 0 !important;
 }
+
+.ui-dialog .ui-dialog-buttonpane{
+    background:#f5f5f5;
+    padding:10px;
+}
+
+.ui-dialog .ui-dialog-buttonpane button{
+    margin:5px;cursor:pointer
+}
+
+.ui-widget-overlay{
+    background:#999;
+    opacity:.5;
+}
+
+/*jquery ui dialog css modify end*/
