--- a/MvcFox/MvcFox/Views/Shared/_Layout.cshtml
+++ b/MvcFox/MvcFox/Views/Shared/_Layout.cshtml
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - 我的 ASP.NET 应用程序</title>
+    <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="~/assets/jquery-ui-1.11.4/jquery-ui.min.css" rel="stylesheet" />
     <link href="~/Content/messi/messi.min.css" rel="stylesheet" type="text/css" />
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/site.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Content/messi/messi.min.js" type="text/javascript"></script>
 </head>
@@ -41,7 +41,8 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Scripts/bootstrap.js"></script>
+    <script src="~/Scripts/respond.js"></script>
     <script src="~/assets/jquery-ui-1.11.4/jquery-ui.min.js"></script>
     <script src="~/assets/jquery-ui-ext.js"></script>
     @RenderSection("scripts", required: false)
