--- a/MvcFox/MvcFox/Views/Shared/_Layout.cshtml
+++ b/MvcFox/MvcFox/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
     <script src="~/Scripts/bootstrap.js"></script>
     <script src="~/Scripts/respond.js"></script>
     <script src="~/assets/jquery-ui-1.11.4/jquery-ui.min.js"></script>
-    <script src="~/assets/jquery-ui-ext.js"></script>
+    <script src="~/assets/jquery-ext.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
