--- a/MvcFox/MvcFox/Views/TestForm/TestErrorMsg.cshtml
+++ b/MvcFox/MvcFox/Views/TestForm/TestErrorMsg.cshtml
@@ -11,19 +11,13 @@
   left: 0;
   right: 0;
   width: 100%;
-  display: inline-block !important;
+  /*display: inline-block !important;*/
   -webkit-transition: -webkit-transform .5s, opacity .5s;
           transition: transform .5s, opacity .5s;
   -webkit-transition: -webkit-transform cubic-bezier(0.19, 1, 0.22, 1) 0.5s, opacity cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
           transition: transform cubic-bezier(0.19, 1, 0.22, 1) 0.5s, opacity cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
   pointer-events: none;
   text-align: center;
-}
-.alert-top-wrapper.ng-hide {
-  /* -webkit-transform: translateY(-100%); */
-  -ms-transform: translateY(-100%);
-  /* transform: translateY(-100%); */
-  /* opacity: 0; */
 }
 .alert-top-wrapper * {
   pointer-events: auto;
@@ -36,32 +30,60 @@
   min-width: 400px;
   margin-bottom: 0;
 }
-@@media (max-width: 767px) {
-  .alert-top-wrapper .alert {
-    min-width: 80%;
-  }
-}
 </style>
 
 <h2>TestErrorMsg</h2>
 
-<div ng-show="alertShown" class="alert-top-wrapper">
+@*<div id="errorPanel" class="alert-top-wrapper" style="display:none">
     <div class="alert alert alert-workaround alert-dismissable alert-danger" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">×</span>
-            <span class="sr-only">Close</span>
-        </button>
-        <div ng-transclude=""><span class="glyphicon glyphicon-remove"></span><span class="ng-binding ng-scope"> 请更正这个页面中的错误。</span></div>
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+        <div><span class="glyphicon glyphicon-remove"></span><span> 请更正这个页面中的错误。</span></div>
     </div>
+</div>*@
+
+@*<div class="alert-top-wrapper" style="display:none">
+    <div class="alert alert alert-workaround alert-dismissable alert-success" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+        <div><span class="glyphicon glyphicon-ok"></span><span> 保存选项成功！</span></div>
+    </div>
+</div>*@
+
+<div>
+    <button onclick="showError();">显示错误消息</button>
+    <button onclick="showAlert();">显示成功消息</button>
 </div>
 
-<div ng-show="alertShown" class="alert-top-wrapper ng-hide">
-    <div class="alert alert alert-workaround alert-dismissable alert-success" role="alert" alert="" type="workaround" close="hideAlert()">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">×</span>
-            <span class="sr-only">Close</span>
-        </button>
-        <div ng-transclude=""><span class="glyphicon glyphicon-ok"></span><span class="ng-binding ng-scope"> 保存选项成功！</span></div>
-    </div>
-</div>
+<script type="text/javascript">
+    function showAlert() {
+        if (window.showAlertTime) {
+            clearTimeout(window.showAlertTime);
+        }
+        $(".alert-top-wrapper").fadeOut();
+        var h = '<div class="alert-top-wrapper alertPanel" style="display:none">';
+        h += '<div class="alert alert-workaround alert-dismissable alert-success" role="alert">';
+        h += '<button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>';
+        h += '<div><span class="glyphicon glyphicon-ok"></span><span> 保存选项成功！</span></div>';
+        h += '</div>';
+        h += '</div>';
+        $(h).appendTo(document.body).slideDown();
+        window.showAlertTime = setTimeout(function () { $(".alertPanel").slideUp('slow'); }, 3000);
+    }
 
+    function showError() {
+        if (window.showErrorTime) {
+            clearTimeout(window.showErrorTime);
+        }
+        $(".alert-top-wrapper").fadeOut();
+        var h = '<div class="alert-top-wrapper errorPanel" style="display:none">';
+        h += '<div class="alert alert-workaround alert-dismissable alert-danger" role="alert">';
+        h += '<button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>';
+        h += '<div><span class="glyphicon glyphicon-remove"></span><span> 请更正这个页面中的错误。</span></div>';
+        h += '<div><span class="glyphicon glyphicon-remove"></span><span> 请更正这个页面中的错误。</span></div>';
+        h += '<div><span class="glyphicon glyphicon-remove"></span><span> 请更正这个页面中的错误。</span></div>';
+        h += '<div><span class="glyphicon glyphicon-remove"></span><span> 请更正这个页面中的错误。</span></div>';
+        h += '</div>';
+        h += '</div>';
+        $(h).appendTo(document.body).slideDown();
+        window.showErrorTime = setTimeout(function () { $(".errorPanel").slideUp('slow'); }, 5000);
+    }
+</script>
