--- a/MVCValidateDemo/MVCValidateDemo/Views/Home/Index.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/Home/Index.cshtml
@@ -20,5 +20,7 @@
         <p><a href="~/Student/Create3">添加自定义验证</a></p>
     </div>
     <div class="col-md-4">
+        <h2>cust</h2>
+        <p><a href="~/Student/Create4">邮政编码</a></p>
     </div>
 </div>
