--- a/MVCValidateDemo/MVCValidateDemo/Views/Shared/_Layout.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/Shared/_Layout.cshtml
@@ -40,6 +40,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/comm.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
