--- a/MVCValidateDemo/MVCValidateDemo/Views/Home/Index.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/Home/Index.cshtml
@@ -22,5 +22,6 @@
     <div class="col-md-4">
         <h2>cust</h2>
         <p><a href="~/Student/Create4">邮政编码</a></p>
+        <p><a href="~/Student/Create5">时间比较</a></p>
     </div>
 </div>
