--- a/MVCValidateDemo/MVCValidateDemo/Views/Home/Index.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
     </div>
     <div class="col-md-4">
         <h2>demo</h2>
+        <p><a href="~/JqueryValidateDemo/index">jquery validation demo</a></p>
         <p><a href="~/Student/Create">普通表单验证</a></p>
         <p><a href="~/Student/Create2">动态增加和删除验证规则</a></p>
         <p><a href="~/Student/Create3">添加自定义验证</a></p>
