--- a/MVCValidateDemo/MVCValidateDemo/Views/Home/Index.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/Home/Index.cshtml
@@ -24,5 +24,6 @@
         <h2>cust</h2>
         <p><a href="~/Student/Create4">邮政编码</a></p>
         <p><a href="~/Student/Create5">时间比较</a></p>
+        <p><a href="~/JqueryValidateDemo/InputLimit">文本输入限制</a></p>
     </div>
 </div>
