--- a/MVCValidateDemo/MVCValidateDemo/Views/Shared/_Layout.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqueryval")
-    <script src="~/Scripts/comm.js"></script>
+    @Scripts.Render("~/bundles/base")
     @RenderSection("scripts", required: false)
 </body>
 </html>
