--- a/MVCValidateDemo/MVCValidateDemo/Views/Student/Create2.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/Student/Create2.cshtml
@@ -3,11 +3,14 @@
     ViewBag.Title = "Index";
 }
 
+<script src="~/assets/ueditor/ueditor.config.js" type="text/javascript"></script>
+<script src="~/assets/ueditor/ueditor.all.min.js" type="text/javascript"></script>
+<script src="~/assets/ueditor/lang/zh-cn/zh-cn.js" type="text/javascript"></script>
 <h2>新增学生</h2>
 <p>
     动态增加和删除验证规则
 </p>
-@using (Html.BeginForm("index", "Student", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("index", "Student", FormMethod.Post, new { @id = "form1", @class = "form-horizontal" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary("", new { @class = "text-danger" })
@@ -26,6 +29,13 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.Content, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextAreaFor(m => m.Content, new { @rows = 10, @cols = 80 })
+            @Html.ValidationMessageFor(m => m.Content, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="保存" />
         </div>
@@ -35,6 +45,11 @@
 @section Scripts {
 <script>
     $(function () {
+        UE.getEditor('Content');
+        //$.validator.setDefaults({
+        //    ignore: []
+        //});
+        $("#form1").validate().settings.ignore = [];
         $("#Age").rules("remove", "required");
         $("#Age").rules("add", {
             minlength: 2,
@@ -42,6 +57,12 @@
             messages: {
                 minlength: "至少2个字符。",
                 minlength: "最多2个字符。"
+            }
+        });
+        $("textarea[name=Content]").rules("add", {
+            required: true,
+            messages: {
+                required: "请输入个人简介。"
             }
         });
 
