--- a/MVCValidateDemo/MVCValidateDemo/Views/Shared/_Layout.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - 我的 ASP.NET 应用程序</title>
     @Styles.Render("~/Content/css")
+    <link href="~/assets/bootstrap/font-awesome.min.css" rel="stylesheet" />
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
 </head>
@@ -25,6 +26,7 @@
                     <li>@Html.ActionLink("主页", "Index", "Home")</li>
                     <li>@Html.ActionLink("关于", "About", "Home")</li>
                     <li>@Html.ActionLink("联系方式", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("图片上传", "Index", "PicUploadDemo")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
