--- a/MVCValidateDemo/MVCValidateDemo/assets/css/Site.css
+++ b/MVCValidateDemo/MVCValidateDemo/assets/css/Site.css
@@ -70,7 +70,17 @@ textarea {
 	color: #23527c;
 }
 /*图片上传*/
-#btuplaodGain{
+.speed-panel{
+    width: 80px;
+    height: 80px;
+    background: url(../images/lent.png) no-repeat;
+}
+.speed-panel:hover{
+    width: 80px;
+    height: 80px;
+    background: url(../images/lent2.png) no-repeat;
+}
+/*#btuplaodGain{
     width: 80px;
     height: 80px;
     background: url(../images/lent.png) no-repeat;
@@ -79,7 +89,7 @@ textarea {
     width: 80px;
     height: 80px;
     background: url(../images/lent2.png) no-repeat;
-}
+}*/
 .clsimagepre{
     width: 80px;
     height: 80px;
