--- a/MVCValidateDemo/MVCValidateDemo/assets/css/Site.css
+++ b/MVCValidateDemo/MVCValidateDemo/assets/css/Site.css
@@ -70,12 +70,12 @@ textarea {
 	color: #23527c;
 }
 /*图片上传*/
-.speed-panel{
+.qq-upload-button{
     width: 80px;
     height: 80px;
     background: url(../images/lent.png) no-repeat;
 }
-.speed-panel:hover{
+.qq-upload-button:hover{
     width: 80px;
     height: 80px;
     background: url(../images/lent2.png) no-repeat;
