update pic upload

--- a/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index.cshtml
@@ -49,7 +49,7 @@
                         @if (Model.Photos != null)
                         {
                             var len = Model.Photos.Count;
-                            <div class="speed-panel" id="Gain">
+                            <div class="speed-panel picupload" id="Gain">
                                 @{ var index = 0; }
                                 @foreach (var item in Model.Photos)
                                 {
