--- a/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index2.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index2.cshtml
@@ -49,6 +49,17 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="col-sm-2 control-label">
+                        图片2<span style="color: #F00">*</span>
+                    </label>
+                    <div class="col-sm-10">
+                        <div class="row">
+                            <div class="col-lg-12 form-control-static">添加图片。</div>
+                        </div>
+                        @Html.PicUpload(p => p.Files2)
+                    </div>
+                </div>
+                <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <input type="submit" class="btn btn-primary" value="保存" />
                     </div>
