--- a/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index2.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index2.cshtml
@@ -17,7 +17,7 @@
 
 @section scripts{
     <script src="~/assets/fileupload/jquery.fineuploader-3.0.min.js"></script>
-    <script src="~/Scripts/updatepic.js"></script>
+    <script src="~/Scripts/picupload.js"></script>
     <link href="~/assets/lightbox/css/lightbox.css" rel="stylesheet" />
     <script src="~/assets/lightbox/js/lightbox.min.js"></script>
 }
