--- a/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index.cshtml
@@ -17,7 +17,7 @@
 
 @section scripts{
     <script src="~/assets/fileupload/jquery.fineuploader-3.0.min.js"></script>
-    <script src="~/Scripts/updatepic.js"></script>
+    <script src="~/Scripts/picupload.js"></script>
     <link href="~/assets/lightbox/css/lightbox.css" rel="stylesheet" />
     <script src="~/assets/lightbox/js/lightbox.min.js"></script>
 }
@@ -37,7 +37,6 @@
             @using (Html.BeginForm("Index", "PicUploadDemo", FormMethod.Post, new { @id = "form1", @class = "form-horizontal" }))
             {
                 @Html.AntiForgeryToken()
-                @Html.HiddenFor(p => p.PhotoFolderId)
                 <div class="form-group">
                     <label class="col-sm-2 control-label">
                         图片<span style="color: #F00">*</span>
@@ -46,49 +45,37 @@
                         <div class="row">
                             <div class="col-lg-12 form-control-static">添加图片。</div>
                         </div>
-                        @if (Model.Photos != null)
-                        {
+                        @{
+                            var index = 0;
                             var len = Model.Photos.Count;
-                            <div class="speed-panel picupload" id="Gain">
-                                @{ var index = 0; }
-                                @foreach (var item in Model.Photos)
-                                {
-                                    <div class="speed-main">
-                                        <div class="speed-img">
-                                            <a href="@item.ThumbPath" data-lightbox="roadtrip">
-                                                <img src="@item.ThumbPath">
-                                            </a>
-                                        </div>
-                                        <div class="speed-del">
-                                            <a href="javascript:;" onclick="deletePic(this, 'Gain')">
-                                                <i class="fa fa-minus-circle fa-lg">
-                                                </i>
-                                            </a>
-                                        </div>
-                                        <input type="hidden" class='filename' value="raw" name="@string.Format("{0}FileName{1}", "Gain", index)" />
-                                    </div>
-                                    index++;
-                                }
-                                @if (len < 1)
-                                {
-                                    <div class="speed-main" id="btnGain">
-                                        <a href="#">
-                                            <div class="lent">
-                                            </div>
+                        }
+                        <div class="speed-panel picupload" id="Gain">
+                            <input name="Gain" type="hidden" value="@Model.PhotoFolderId" />
+                            @foreach (var item in Model.Photos)
+                            {
+                                <div class="speed-main">
+                                    <div class="speed-img">
+                                        <a href="@item.ThumbPath" data-lightbox="roadtrip">
+                                            <img src="@item.ThumbPath">
                                         </a>
                                     </div>
-                                }
-                                else
-                                {
-                                    <div class="speed-main " style="display: none;" id="btnGain">
-                                        <a href="#">
-                                            <div class="lent">
-                                            </div>
+                                    <div class="speed-del">
+                                        <a href="javascript:;" class='del'>
+                                            <i class="fa fa-minus-circle fa-lg">
+                                            </i>
                                         </a>
                                     </div>
-                                }
+                                    <input type="hidden" class='filename' value="raw" name="@string.Format("{0}FileName{1}", "Gain", index)" />
+                                </div>
+                                index++;
+                            }
+                            <div class="speed-main" id="btnGain" style="@(len >= 9 ? "display: none;" : "")">
+                                <a href="#">
+                                    <div class="lent">
+                                    </div>
+                                </a>
                             </div>
-                                    }
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
@@ -97,15 +84,13 @@
                         <button type="button" class="btn btn-default" onclick="goback()">取消</button>
                     </div>
                 </div>
-            }
+                            }
         </div>
     </div>
 </div>
 <script type="text/javascript">
     $(function () {
-        //init9PicUploader("@Model.PhotoFolderId", "btnGain", '@Href("~/Help/PicUpload_9")', "Gain", 9);
-
-        $.picupload("@Model.PhotoFolderId", "btnGain", '@Href("~/Help/PicUpload_9")', "Gain", 9);
+        $.picupload('@Href("~/__picuploader/Upload")', '@Href("~/__picuploader/Delete")', "Gain", 9);
 
         $("#frm-submit").click(function (evt) {
             var frmObj = $("#form1");
