--- a/MVCValidateDemo/MVCValidateDemo/Views/Shared/_Layout.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="~/assets/bootstrap/font-awesome.min.css" rel="stylesheet" />
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
+    @RenderSection("head", required: false)
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
