--- a/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index.cshtml
@@ -3,22 +3,14 @@
     ViewBag.Title = "Index";
 }
 
-<style type="text/css">
-    .qq-upload-list {
-        display: none;
-    }
-
-    .qq-upload-button {
-        background-color: transparent;
-        width: 80px;
-        height: 80px;
-    }
-</style>
+@section head{
+    <link href="~/assets/picupload/picupload.css" rel="stylesheet" />
+    <link href="~/assets/lightbox/css/lightbox.css" rel="stylesheet" />
+}
 
 @section scripts{
     <script src="~/assets/fileupload/jquery.fineuploader-3.0.min.js"></script>
-    <script src="~/Scripts/picupload.js"></script>
-    <link href="~/assets/lightbox/css/lightbox.css" rel="stylesheet" />
+    <script src="~/assets/picupload/picupload.js"></script>
     <script src="~/assets/lightbox/js/lightbox.min.js"></script>
 }
 <div class="row">
@@ -49,17 +41,17 @@
                             var index = 0;
                             var len = Model.Photos.Count;
                         }
-                        <div class="speed-panel picupload" id="Gain">
+                        <div class="pp-panel picupload" id="Gain">
                             <input name="Gain" type="hidden" value="@Model.PhotoFolderId" />
                             @foreach (var item in Model.Photos)
                             {
-                                <div class="speed-main">
-                                    <div class="speed-img">
+                                <div class="pp-box">
+                                    <div class="pp-img">
                                         <a href="@item.ThumbPath" data-lightbox="roadtrip">
                                             <img src="@item.ThumbPath">
                                         </a>
                                     </div>
-                                    <div class="speed-del">
+                                    <div class="btn-del">
                                         <a href="javascript:;" class='del'>
                                             <i class="fa fa-minus-circle fa-lg">
                                             </i>
@@ -69,14 +61,18 @@
                                 </div>
                                 index++;
                             }
-                            <div class="speed-main" id="btnGain" style="@(len >= 9 ? "display: none;" : "")">
+                            <div class="pp-box" id="btnGain" style="@(len >= 9 ? "display: none;" : "")">
                                 <a href="#">
                                     <div class="lent">
                                     </div>
                                 </a>
                             </div>
+                            <div style="clear:both"></div>
                         </div>
                     </div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
