--- a/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index2.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index2.cshtml
@@ -35,7 +35,10 @@
                     </label>
                     <div class="col-sm-10">
                         <div class="row">
-                            <div class="col-lg-12 form-control-static">添加图片。</div>
+                            <div class="col-lg-12 form-control-static">
+                                添加图片。
+                                @Html.PicUploadValidationMessageFor(p => p.Files, null, new { @class = "text-danger" })
+                            </div>
                         </div>
                         @Html.PicUpload(p => p.Files)
                     </div>
@@ -46,7 +49,10 @@
                     </label>
                     <div class="col-sm-10">
                         <div class="row">
-                            <div class="col-lg-12 form-control-static">添加图片。</div>
+                            <div class="col-lg-12 form-control-static">
+                                添加图片。
+                                @Html.PicUploadValidationMessageFor(p => p.Files2, null, new { @class = "text-danger" })
+                            </div>
                         </div>
                         @Html.PicUpload(p => p.Files2)
                     </div>
@@ -60,3 +66,8 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+    $(function () {
+        $("#form1").validate().settings.ignore = [];
+    });
+</script>
