--- a/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index2.cshtml
+++ b/MVCValidateDemo/MVCValidateDemo/Views/PicUploadDemo/Index2.cshtml
@@ -6,6 +6,20 @@
 @section head{
     <link href="~/assets/picupload/picupload.css" rel="stylesheet" />
     <link href="~/assets/lightbox/css/lightbox.css" rel="stylesheet" />
+    <style type="text/css">
+        #btnImageUpload
+        {
+            background: url("@Href("~/assets/images/img-upload.png")");
+            width: 112px;
+            height: 24px;
+            border: 0;
+            margin:0 10px 5px 0;
+            display: inline-block;
+        }
+        #btnImageUpload .qq-upload-list {
+            display: none;
+        }
+    </style>
 }
 
 @section scripts{
@@ -50,11 +64,11 @@
                     <div class="col-sm-10">
                         <div class="row">
                             <div class="col-lg-12 form-control-static">
-                                添加图片。
+                                <div id="btnImageUpload"></div>
                                 @Html.PicUploadValidationMessageFor(p => p.Files2, null, new { @class = "text-danger" })
                             </div>
                         </div>
-                        @Html.PicUpload(p => p.Files2)
+                        @Html.PicUpload(p => p.Files2, "btnImageUpload")
                     </div>
                 </div>
                 <div class="form-group">
